--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 services:
   elasticsearch:
@@ -6,8 +6,6 @@ services:
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
-    ports:
-      - 9200:9200
     volumes:
       - elastic_data:/usr/share/elasticsearch/data
     networks:
@@ -18,6 +16,8 @@ services:
       context: .
       dockerfile: es.Dockerfile
     container_name: python
+    depends_on:
+      - elasticsearch    
     ports:
       - 8888:8888
     networks:
@@ -26,7 +26,9 @@ services:
 volumes:
   elastic_data:
     driver: local
+    name: elastic_volume
 
 networks:
   elastic_network:
     driver: bridge
+    name: elastic_hub
